--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainViewController">
    <content>
       <VBox prefHeight="348.0" prefWidth="518.0">
          <children>
@@ -15,8 +14,8 @@
               <menus>
                 <Menu mnemonicParsing="false" text="Produto">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Registrar" />
-                        <MenuItem mnemonicParsing="false" text="Comprar" />
+                    <MenuItem fx:id="menuItemRegistro" mnemonicParsing="false" onAction="#onMenuItemRegistroAction" text="Registrar" />
+                        <MenuItem fx:id="menuItemCompras" mnemonicParsing="false" onAction="#onMenuItemComprasAction" text="Comprar" />
                   </items>
                 </Menu>
               </menus>
